# rbcar_ros_ws

./: .gitignore  Makefile  frames_2025-02-10_11.39.48.gv  nav2_frames_params.yaml  postinstall.sh  setup.sh
docs/: commands.md  launch.md  logs.md  missing_urdf_plugins.md  nav2_rbcar.md  tasks.md  turtlebot3_nav2.md
scripts/: find_urdf_deps.sh
src/rbcar_description/launch/: combined.launch.py
src/rbcar_model/: CMakeLists.txt  package.xml
src/rbcar_model/config/: rbcar_controllers.yaml
src/rbcar_model/config/cartographer/: rbcar_2d.lua  rbcar_3d.lua
src/rbcar_model/launch/: all.launch.py  all.launch.xml  spawn_rbcar.launch.py  spawn_urdf.launch.py  xacro_to_urdf.launch.py
src/rbcar_model/launch/cartographer/: cartographer.launch.py  cartographer_3d.launch.py  occupancy_grid.launch.py
src/rbcar_model/robots/: rbcar2.urdf.xacro
src/rbcar_model/rviz/: nav2.rviz  slam-1.rviz
src/rbcar_model/urdf/bases/: rbcar_base.gazebo.xacro  rbcar_base.urdf.xacro
src/rbcar_model/worlds/: test.world
src/rbcar_nav2/: CMakeLists.txt  package.xml
src/rbcar_nav2/config/: slam_config.yaml
src/rbcar_nav2/launch/: nav.launch.py  navigation.launch.py  slam.launch.py
src/rbcar_nav2/map/: empty_map.yaml  map_1.pgm  map_1.yaml
src/rbcar_nav2/param/: nav2_params.yaml
src/rbcar_slam/: CMakeLists.txt  package.xml
src/rbcar_slam/config/: mapper_params_online_async.yaml  nav2_params.yaml  slam_params.yaml
src/rbcar_slam/launch/: slam.launch.py
src/rbcar_slam/rviz/: config.rviz
