<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rbcar_nav2</name>
  <version>0.1.0</version>
  <description>
    ROS 2 navigation package for RBCar using Nav2 and SLAM
  </description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>rviz2</depend>
  <depend>rbcar_model</depend>
  <depend>nav2_common</depend>
  <depend>navigation2</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 